--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,3 @@
-# BEGIN s2Member GZIP exclusions
-<IfModule rewrite_module>
-	RewriteEngine On
-	RewriteBase /
-	RewriteCond %{QUERY_STRING} (^|\?|&)s2member_file_download\=.+ [OR]
-	RewriteCond %{QUERY_STRING} (^|\?|&)no-gzip\=1
-	RewriteRule .* - [E=no-gzip:1]
-</IfModule>
-# END s2Member GZIP exclusions
 
 # BEGIN WordPress
 # The directives (lines) between "BEGIN WordPress" and "END WordPress" are
@@ -28,26 +19,14 @@
 <ifModule mod_headers.c>
 Header set X-Endurance-Cache-Level "0"
 </ifModule>
-Options -Indexes 
-
-				<IfModule mod_rewrite.c>
-					RewriteEngine On
-					RewriteBase /
-					RewriteRule ^/wp-content/endurance-page-cache/ - [L]
-					RewriteCond %{REQUEST_METHOD} !POST
-					RewriteCond %{QUERY_STRING} !.*=.*
-					RewriteCond %{HTTP_COOKIE} !(wordpress_test_cookie|comment_author|wp\-postpass|wordpress_logged_in|wptouch_switch_toggle|wp_woocommerce_session_) [NC]
-					RewriteCond %{DOCUMENT_ROOT}/wp-content/endurance-page-cache/$1/_index.html -f
-					RewriteRule ^(.*)$ /wp-content/endurance-page-cache/$1/_index.html [L]
-				</IfModule>
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-RewriteBase /
+RewriteBase /hssw/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule . /hssw/index.php [L]
 </IfModule>
 
 # END WordPress
