--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ wp-content/advanced-cache.php
 wp-content/wp-cache-config.php
 sitemap.xml
 sitemap.xml.gz
+.htaccess
 
 # @TODO writable paths
 wp-content/cache/
